# mba_fc_design_patterns

./: .gitignore  Dockerfile  README.md  create.sql  docker-compose.yaml  pyproject.toml  pytest.ini  sonar-project.properties
.devcontainer/: devcontainer.json
.docker/: entrypoint.sh
resources/: patterns.md  patterns.txt  patterns_of_Enterprise_application_architecture.md  solid.txt
src/core/: app.py
src/core/invoice/application/: dto.py  use_cases.py
src/core/invoice/application/decorator/: logger_decorator.py
src/core/invoice/application/presenter/: presenter.py
src/core/invoice/application/repository/: contract_repository.py
src/core/invoice/application/usecase/: dto.py  email_sender.py  generate_invoices.py  use_case.py
src/core/invoice/domain/: contract.py  invoice.py  payment.py
src/core/invoice/infra/database/: database_adapter.py  database_adapter_factory.py  mysql_adapter.py  postgres_adapter.py  type_database_adapter.py
src/core/invoice/infra/kafka/: kafka.py
src/core/invoice/infra/mediator/: concrete_mediator.py  mediator.py
src/core/invoice/infra/migrations/: migrate.py
src/core/invoice/infra/presenter/: presenter.py
src/core/invoice/infra/repository/: contract_database_repository.py  contract_in_memory_repository.py
src/core/invoice/tests/integration/application/: test_integr_api.py  test_integr_generate_invoices.py
src/core/shared/domain/: entities.py  exceptions.py  value_objects.py
src/core/shared/tests/domain/: test_unit_entities.py
src/core/tests/integration/application/: test_integr_generate_invoices.py
(+5 files in other folders)
