
[project]
name = "pos_fc_design_patterns"
version = "0.1.0"
description = ""
authors = [
    {name = "candidosouza", email = "candidosouzza@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "n"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=1.6.0",
    "pylint>=2.13.0",
    "pytest>=7.1.1",
    "pytest-cov>=3.0.0",
]
[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
