
[project]
name = "pos_fc_design_patterns"
version = "0.1.0"
description = ""
authors = [
    {name = "candidosouza", email = "candidosouzza@gmail.com"},
]
dependencies = [
    "psycopg2>=2.9.6",
    "python-dateutil>=2.8.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "n"}
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=1.6.0",
    "pylint>=2.13.0",
    "pytest>=7.1.1",
    "pytest-cov>=3.0.0",
]
[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
